# buck2

./: .buckconfig  .buckconfig.buildbuddy  .buckconfig.example  BUCK  Cargo.toml  buildbuddy.yaml  proto_defs.bzl  test_utils.bzl
.buckconfig.d/: common.buckconfig
.github/workflows/: build-and-test.yml  upload_buck2.yml
allocative/allocative/: Cargo.toml
app/bazel_event_publisher_proto/: build.rs
app/buck2_bes_configuration/: BUCK  Cargo.toml
app/buck2_bes_configuration/src/: lib.rs
app/buck2_client/: Cargo.toml
app/buck2_client_ctx/: BUCK  Cargo.toml
app/buck2_core/: Cargo.toml
app/buck2_data/: build.rs  data.proto
app/buck2_events/: BUCK  Cargo.toml
app/buck2_external_cells/: BUCK  Cargo.toml
app/buck2_server/: Cargo.toml
app/buck2_test/: BUCK  Cargo.toml
app_dep_graph_rules/: rules.bzl  test_impl.bzl
bootstrap/: buck2
buildbuddy/: BUCK  defs.bzl  run_buck2_test_matrix.sh  run_stack_test_matrix.sh
buildbuddy/toolchains/: BUCK
docs/developers/: buck2_buildbuddy_testing_plan.md
docs/users/: remote_execution.md
examples/hello_world/: .buckconfig  BUCK  BUILDBUDDY_BAZEL_BES.md  README.md  run_local_buildbuddy_bazel_bes_compare.sh  run_local_buildbuddy_bes_rbe.sh  story_main.cpp  story_messages.cpp  story_messages.hpp  story_numbers.cpp  story_numbers.hpp  story_renderer.cpp  story_renderer.hpp
prelude/apple/: apple_test.bzl
prelude/decls/: core_rules.bzl  go_common.bzl  go_rules.bzl  (+2 more)
remote_execution/oss/re_grpc_proto/: BUCK  Cargo.toml  build.rs
shim/: BUCK  git_fetch.bzl  rust_toolchain.bzl  shims.bzl
website/: sidebars.ts
(+197 files in other folders)
