[package]
description = "A library providing gRPC client for Bazel remote execution"
edition = "2021"
license = { workspace = true }
name = "re_grpc_proto"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
prost = { workspace = true }
prost-types.workspace = true
prost-wkt = "0.5.1"
prost-wkt-types = "0.5"
serde= { workspace = true, features = ["derive"] }
tonic = { workspace = true }

[build-dependencies]
buck2_protoc_dev = { workspace = true }
prost-wkt-build = "0.5"
